--- a/github-2018/2015104146.md
+++ b/github-2018/2015104146.md
@@ -10,7 +10,7 @@
 * 이메일 : khl2bb@naver.com
 * 거주지역 : 제주도
 
-![ProfilePhoto](https://raw.githubusercontent.com/khl2bb/khl2bb.github.io/master/hotang2.PNG)
+![ProfilePhoto](https://github.com/khl2bb/khl2bb.github.io/blob/master/hotang2.PNG?raw=true)
 
 
 ## 소속
@@ -24,6 +24,11 @@
 * Python(입문)
 * Scratch(초급)
 * Entry(초급)
+
+## 혼자 공부할 때 이용했던 웹 사이트
+* https://www.codecademy.com/
+* https://opentutorials.org/course/1
+* https://www.udemy.com/user/nadongbin/
 
 ## 사용해 본 개발 환경
 
@@ -40,6 +45,10 @@
   * 학과 전시회 때 게임 샘플을 가지고 게임을 만들어봄
 * Android Studio
   * JAVA와 함께 앱 개발 공부를 할 때 사용해봄
+
+## 만드는 중인 것
+* 팀 활동으로 앱인벤터로 제주대학교에서 출발하는 버스의 출발까지 남은 시간을 계산해주는 앱
+* 자바로 게임 인터페이스 구축하기
 
 ## 관심 분야
 
@@ -61,16 +70,32 @@
 
 ## 성격
 
-* MBTI 성격 검사에서 INTJ 형으로 나타남. (3번 연속 INTJ, I 확실 N 확실 T 약간 J 약간)
-  * INTJ 형 관련 자료
-  > https://www.16personalities.com/ko/%EC%84%B1%EA%B2%A9%EC%9C%A0%ED%98%95-intj
-  > https://namu.wiki/w/INTJ
-  > https://ko.wikipedia.org/wiki/INTJ
+* MBTI 성격 검사에서 INTJ 형으로 나타남. (여태까지의 MBTI 성격검사 총 횟수는 3번인데, 3번 연속 INTJ 형, I 확실 N 확실 T 약간 J 약간)
+> I 와 N 은 검사 점수가 확실히 I N 형을 가리킨다. 하지만 T 와 J는 거의 점수가 비슷하므로, INTJ형 말고도, INFJ, INTP, INFP형의 특성도 갖추고 있다고 볼 수 있다.
+* 성격 검사 세부 정보
+  * 최근 실시한 MBTI 성격유형 검사결과 원점수 : E:I / 1:20 , S:N / 4:22 , T:F / 11:13 , J:P / 11 : 11 
+  * 자가채점 분류기준, I의 원점수가 10점 이상이면 I, N의 원점수가 13점 이상이면 N, F의 원점수가 15점 이상이면 F, P의 원점수가 12점 이상이면 P
+  * 최근 MBTI 성격유형 검사 실시 날짜 : 2018년 10월 16일
+  * 주관 : 제주대학교 학생상담센터
+  * 검사지 : (주)어세스타
+* INTJ 성격유형 특성
+> 독창적인 마인드와 추진력을 통해 목표를 성취하고 아이디어를 수행한다. 외부사건에 대한 패턴을 빠르게 파악하며, 장기적인 관점에서 이를 해석한다. 자신이 맡는 업무에 대해 위임을 받으면 일을 조직화하여 수행한다. 회의주의적이고 독립적이며, 자신이나 타인의 역량이나 수행에 대해 높은 기대수준을 갖는다.
+* INFJ 성격유형 특성
+> 아이디어와 물질적인 소유, 그리고 다른 사람과의 관계 안에서 의미와 연관성을 찾는다. 사람들의 동기를 이해하려 하고, 다른 사람들에 대한 통찰력을 지니고 있다. 자신의 확고한 가치에 대해 양심 있게 수행한다. 공동선을 추구하기 위한 명확한 비전을 제시한다. 자신의 비전을 수행하기 위해 조직화하고, 결단력이 있다.
+* INTP 성격유형 특성
+> 자신이 관심있어 하는 모든 것에 대해 논리적인 설명을 하려고 한다. 이론적이고, 추상적이며 사회적인 상호작용보다는 아이디어에 관심이 많다. 조용하고, 침착하며, 유연성이 있고, 적응력이 뛰어나다. 관심 있는 분야에서 문제가 생기면 이를 해결하기 위해 놀라운 집중력을 보인다. 회의적이며, 떄로는 비판적이고, 항상 분석적이다.
+* INFP 성격유형 특성
+> 이상주의자이며, 자신에게 의미 있는 가치나 중요한 사람들에게 충성한다. 자신의 가치와 조화를 이룰 수 있는 외부세계를 원한다. 호기심이 많고, 가능성을 빨리 파악하며, 아이디어를 수행하기 위한 촉매 역할을 한다. 사람들을 이해하려 하고, 그들의 가능성을 성취할 수 있도록 돕는다. 자신의 가치가 위협받지 않는 한 잘 적응하고, 융통성이 있으며, 수용적이다.
+* INTJ 형 관련 자료
+  * https://www.16personalities.com/ko/%EC%84%B1%EA%B2%A9%EC%9C%A0%ED%98%95-intj
+  * https://namu.wiki/w/INTJ
+  * https://ko.wikipedia.org/wiki/INTJ
+  
 
 
 ## 특징
 
-* 우유부단하여 지금 github 프로필도 작성하는 데 많은 시간이 걸림
+* 우유부단하여 지금 github 프로필도 작성하는 데에도 어떤 항목을 적을 지 선택하지 못하여서 많은 시간이 걸림
 * 학교를 졸업하는 것을 목표로 재학 중임
 * 컴퓨터 게임을 많이 하다 보니까 자연스레 컴퓨터 관련 학과에 입학하여 코딩을 배우게 됨
 * 운동을 많이 해본 적 없고, 운동신경이 좋지 않음.
